# OpenSpore

./: .env.example  .gitignore  .spore_history  .watchmanignore  GAP_ANALYSIS.md  LICENSE  README.md  install.sh
context/: LOGS.md  session_summary.md
crates/: Cargo.toml
crates/autonomy/: Cargo.toml
crates/autonomy/src/: engine.rs  heartbeat.rs  journal.rs  lib.rs  scheduler.rs
crates/brain/: Cargo.toml
crates/brain/src/: api.rs  context_assembler.rs  events.rs  learning.rs  lib.rs  parser.rs  thinking.rs
crates/channels/telegram/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/identity template/: AGENTS.md  SOUL.md
crates/core/src/: config.rs  path_utils.rs  state.rs
crates/doctor/: Cargo.toml
crates/io/: Cargo.toml
crates/io/src/: shell.rs
crates/memory/: Cargo.toml
crates/memory/src/: context.rs  lib.rs  retrieval.rs
crates/skills/: Cargo.toml
crates/skills/src/: browser.rs  delegate.rs  edit_file.rs  exec.rs  grep.rs  lib.rs  purge.rs  read_file.rs  search.rs  submit_skill.rs  telegram_send.rs  utils.rs  web_fetch.rs  write_file.rs
crates/skills/src/browser/: launcher.rs  resolver.rs  session.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  lib.rs  ui.rs
crates/watchman/: Cargo.toml
crates/watchman/src/: ignore.rs  queue.rs  types.rs  watcher.rs
skills/: health_check.sh  hello.js  spotify.sh  sys_info.sh  tool_validator.sh
skills/clone_repo/: SKILL.md  clone_repo.js
skills/github_trends/: SKILL.md  github_trends.sh
skills/health_check/: SKILL.md  health_check.sh  main.js
skills/run_dev/: SKILL.md  main.js
skills/run_dev_server/: SKILL.md  main.sh
skills/spotify/: SKILL.md  spotify.sh
skills/sys_info/: SKILL.md  sys_info.sh
src/: doctor.js  prune_context.rs
substrate/: Cargo.toml
substrate/autonomy/: Cargo.toml
substrate/autonomy/src/: engine.rs  heartbeat.rs  journal.rs  scheduler.rs
substrate/brain/: Cargo.toml
substrate/brain/src/: api.rs  compression.rs  context_assembler.rs  lib.rs  thinking.rs
substrate/channels/telegram/: Cargo.toml
substrate/channels/telegram/src/: lib.rs
substrate/cli/: Cargo.toml
substrate/cli/src/: main.rs
substrate/core/: Cargo.toml
substrate/core/identity template/: AGENTS.md  SOUL.md  USER.md
substrate/core/src/: config.rs  lib.rs  path_utils.rs  state.rs
substrate/doctor/: Cargo.toml
substrate/doctor/src/: lib.rs
substrate/io/: Cargo.toml
substrate/io/src/: lib.rs  linux.rs  macos.rs
substrate/memory/: Cargo.toml  REFACTORING.md
substrate/memory/src/: context.rs  git.rs  lib.rs  retrieval.rs  storage.rs  structure.rs  types.rs
substrate/skills/: Cargo.toml
substrate/skills/src/: cron_manager.rs  delegate.rs  diff_patch.rs  edit_file.rs  exec.rs  lib.rs  list_dir.rs  purge.rs  read_file.rs  search.rs  submit_skill.rs  telegram_send.rs  utils.rs  web_fetch.rs  write_file.rs
substrate/swarm/: Cargo.toml
substrate/swarm/src/: lib.rs
substrate/tui/: Cargo.toml
substrate/tui/src/: lib.rs  ui.rs
substrate/watchman/: Cargo.toml
substrate/watchman/src/: lib.rs  processing.rs
