[package]
name = "openspore-brain"
version = "1.2.1"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "2.0"
openspore-core = { path = "../core" }
openspore-skills = { path = "../skills" }
openspore-memory = { path = "../memory" }
chrono = "0.4"
regex = "1.10"
openspore-io = { path = "../io" }
futures = "0.3"
anyhow = "1.0"
