[package]
name = "openspore"
version = "1.2.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
openspore-core = { path = "../core" }
openspore-tui = { path = "../tui" }
openspore-brain = { path = "../brain" }
openspore-doctor = { path = "../doctor" }
openspore-swarm = { path = "../swarm" }
openspore-autonomy = { path = "../autonomy" }
openspore-memory = { path = "../memory" }
openspore-telegram = { path = "../channels/telegram" }
serde_json = "1.0.149"
tracing-appender = "0.2.4"
