[package]
name = "openspore-tui"
version = "1.1.3"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full", "sync"] }
anyhow = "1.0"
rustyline = "17.0"
ratatui = "0.29"
crossterm = "0.28"
openspore-core = { path = "../core" }
openspore-brain = { path = "../brain" }
openspore-doctor = { path = "../doctor" }
openspore-watchman = { path = "../watchman" }
openspore-telegram = { path = "../channels/telegram" }
openspore-autonomy = { path = "../autonomy" }
openspore-memory = { path = "../memory" }
textwrap = "0.16"
