[package]
name = "openspore-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
thiserror = "1.0"
openspore-core = { path = "../core" }
openspore-skills = { path = "../skills" }
openspore-memory = { path = "../memory" }
chrono = "0.4"
regex = "1.10"
openspore-io = { path = "../io" }
anyhow = "1.0"
