[package]
name = "openspore"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
openspore-core = { path = "../core" }
openspore-tui = { path = "../tui" }
openspore-brain = { path = "../brain" }
openspore-doctor = { path = "../doctor" }
serde_json = "1.0"
tracing-appender = "0.2"
