[package]
name = "openspore-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
anyhow = "1.0"
openspore-core = { path = "../core" }
tracing = "0.1"
serde_yaml = "0.9"
