[package]
name = "openspore-swarm"
version = "1.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openspore-core = { path = "../core" }
