[package]
name = "openspore-watchman"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full", "sync"] }
notify = "6.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
openspore-core = { path = "../core" }
openspore-memory = { path = "../memory" }
openspore-brain = { path = "../brain" }
