[package]
name = "openspore-watchman"
version = "1.1.2"
edition = "2024"

[dependencies]
tokio = { version = "1.49", features = ["full", "sync"] }
notify = "6.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
openspore-core = { path = "../core" }
openspore-memory = { path = "../memory" }
openspore-brain = { path = "../brain" }
