[package]
name = "openspore-telegram"
version = "1.0.1"
edition = "2024"

[dependencies]
teloxide = { version = "0.17", features = ["macros"] }
tokio = { version = "1.49", features = ["full"] }
openspore-core = { path = "../../core" }
openspore-brain = { path = "../../brain" }
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"
